--- a/trump/index.html
+++ b/trump/index.html
@@ -105,7 +105,7 @@ var __slice = Array.prototype.slice;
       }
       this.painting = false;
       this.action = null;
-      return this.redraw();
+      //return this.redraw();
     };
     Sketch.prototype.onEvent = function(e) {
       if (e.originalEvent && e.originalEvent.targetTouches) {
@@ -118,8 +118,7 @@ var __slice = Array.prototype.slice;
     };
     Sketch.prototype.redraw = function() {
       var sketch;
-      this.el.width = window.innerWidth;
-      this.el.height = window.innerHeight;
+      this.el.width = this.canvas.width();
       this.context = this.el.getContext('2d');
       sketch = this;
       $.each(this.actions, function() {
