--- a/trump/index.html
+++ b/trump/index.html
@@ -145,8 +145,8 @@ var __slice = Array.prototype.slice;
         case 'mouseup':
         case 'mouseout':
         case 'mouseleave':
-        //case 'touchend':
-       // case 'touchcancel':
+        case 'touchend':
+        case 'touchcancel':
           this.stopPainting();
       }
       if (this.painting) {
@@ -204,7 +204,7 @@ var __slice = Array.prototype.slice;
 	
 <canvas id="canvas" width="3000" height="3000"></canvas>
 
-	<div class="overlay"></div>
+	
 	<div class="colorbox">
 		<p><a href="#canvas" data-color="#ffffff" style="background-color: #ffffff;"></a></p>
 		<p><a href="#canvas" data-color="#3f567a" style="background-color: #3f567a;"></a></p>
