--- a/trump/index.html
+++ b/trump/index.html
@@ -109,8 +109,12 @@ var __slice = Array.prototype.slice;
     };
     Sketch.prototype.onEvent = function(e) {
       if (e.originalEvent && e.originalEvent.targetTouches) {
-        e.pageX = e.originalEvent.targetTouches[0].pageX;
-        e.pageY = e.originalEvent.targetTouches[0].pageY;
+        if (e.originalEvent.targetTouches[0] !== undefined && e.originalEvent.targetTouches[0].pageX!==undefined){
+    e.pageX = e.originalEvent.targetTouches[0].pageX;
+}
+if (e.originalEvent.targetTouches[0] !== undefined &&e.originalEvent.targetTouches[0].pageY){
+    e.pageY = e.originalEvent.targetTouches[0].pageY;
+}
       }
       $.sketch.tools[$(this).data('sketch').tool].onEvent.call($(this).data('sketch'), e);
       e.preventDefault();
@@ -204,7 +208,7 @@ var __slice = Array.prototype.slice;
 	
 <canvas id="canvas" width="3000" height="3000"></canvas>
 
-	
+	<div class="overlay"></div>
 	<div class="colorbox">
 		<p><a href="#canvas" data-color="#ffffff" style="background-color: #ffffff;"></a></p>
 		<p><a href="#canvas" data-color="#3f567a" style="background-color: #3f567a;"></a></p>
