--- a/trump/index.html
+++ b/trump/index.html
@@ -1,5 +1,17 @@
 <html>
+  <!-- Obliterate.me! Can't believe that domain was available, right? -->
+
+  <!-- Anyway -->
+
+  <!-- A toy by Michael Shillingburg  ||  @fancymichael on Twitter -->
+
+  <!-- Not made by the Clinton campaign! -->
+
+  <!-- But you should totally vote for her. -->
+
+  <!-- Have fun! -->
 <head>
+
 	
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<meta name="author" content="michael shillingburg">
@@ -7,6 +19,16 @@
 	<meta name="keywords" content="obliterate, me">
 	<link href="main.css" rel="stylesheet" media="screen" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-81671546-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	<script type="text/javascript">
 var __slice = Array.prototype.slice;
 (function($) {
