--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ now get outta here!
     <meta name="keywords" content="michael, shillingburg, game, design, graphic, unity, fancymichael, michaelshillingburg, super, sculptor, caffeine">
     <meta name="author" content="Michael Shillingburg">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
 
     <link href='https://fonts.googleapis.com/css?family=Rubik:700,400italic,500,400' rel='stylesheet' type='text/css'>
