--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ now get outta here!
   <div id="container">
     <div class="navcontainer">
       <a href="http://michaelshillingburg.tumblr.com/">
-    <div class="navbutton" id="button1" onmouseover="UpdateFooter('#31FF93 6px solid')"
+    <div class="navbutton" id="button1" onmouseover="UpdateFooter('#0aefb9 6px solid')"
     onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w1">T</span><span class="w2">u</span><span class="w3">m</span><span class="w4">b</span><span class="w5">l</span><span class="w6">r</span></div></a>
     <a href="http://www.twitter.com/fancymichael/"><div class="navbutton" id="button2" onmouseover="UpdateFooter('#FA742F 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w7">T</span><span class="w6">w</span><span class="w5">i</span><span class="w4">t</span><span class="w3">t</span><span class="w2">e</span><span class="w1">r</span></div></a>
     <a href="http://shillingburg.itch.io/"><div class="navbutton" id="button3" onmouseover="UpdateFooter('#FF337D 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w1">i</span><span class="w2">t</span><span class="w3">c</span><span class="w4">h</span><span class="w5">.</span><span class="w6">i</span><span class="w7">o</span></div></a>
