--- a/ok/index.html
+++ b/ok/index.html
@@ -28,6 +28,14 @@
 				<a href="gifs.html">Design</a>
 			</div>
 		</div>
+
+		<div class="contentBox"></div>
+		<div class="contentBox"></div>
+		<div class="contentBox"></div>
+		<div class="contentBox"></div>
+		<div class="contentBox"></div>
+		<div class="contentBox"></div>
+
 	</div>
 </body>
 </html>
