fixed twitter link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 !!:     !!: !!:          !:!     !:!   !!:      :!!      !!:  !!! !!:  !!! !!:     
  :      :   : :: ::  ::.: :  ::.: :    .:        :: :: :  : :. :  :: :  :  : :: :: 
 
-for more things made with messy code, follow @heyshilly on twitter
+for more things made with messy code, follow @shillingburger on twitter
 
 now get outta here!
 
@@ -57,7 +57,7 @@ now get outta here!
       <a href="http://michaelshillingburg.tumblr.com/">
     <div class="navbutton" id="button1" onmouseover="UpdateFooter('#0093ff 6px solid')"
     onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w1">T</span><span class="w2">u</span><span class="w3">m</span><span class="w4">b</span><span class="w5">l</span><span class="w6">r</span></div></a>
-    <a href="http://www.twitter.com/heyshilly/"><div class="navbutton" id="button2" onmouseover="UpdateFooter('#0093ff 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w7">T</span><span class="w6">w</span><span class="w5">i</span><span class="w4">t</span><span class="w3">t</span><span class="w2">e</span><span class="w1">r</span></div></a>
+    <a href="http://www.twitter.com/shillingburger/"><div class="navbutton" id="button2" onmouseover="UpdateFooter('#0093ff 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w7">T</span><span class="w6">w</span><span class="w5">i</span><span class="w4">t</span><span class="w3">t</span><span class="w2">e</span><span class="w1">r</span></div></a>
     <a href="http://shillingburg.itch.io/"><div class="navbutton" id="button3" onmouseover="UpdateFooter('#0093ff 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w1">i</span><span class="w2">t</span><span class="w3">c</span><span class="w4">h</span><span class="w5">.</span><span class="w6">i</span><span class="w7">o</span></div></a>
     <a href="mailto:michaelshillingburg@gmail.com"><div class="navbutton" id="button4" onmouseover="UpdateFooter('#0093ff 6px solid')" onmouseout="UpdateFooter('#1A3C72 6px solid')"><span class="w8">E</span><span class="w7">m</span><span class="w6">a</span><span class="w5">i</span><span class="w4">l</span><span class="w3">&nbsp;</span><span class="w2">m</span><span class="w1">e</span></div></a>
   </div>
